Try both the Truffle and the context class loader to find TruffleRuntimeAccess if module layer is not available.